examples/negative/derive/derive_json_unbindable_field.kai
# Negative fixture (derive contract): a field whose type has no JSON
# denotation is reported at the derive, naming the field, rather than
# surfacing later as a missing `to_json` at the first call site.
# `Option[Option[T]]` is the shape at issue: one JSON `null` cannot
# denote two distinct absences.

#[derive(Json)]
type Config = { retries: Option[Option[Int]] }

fn main() : Int = 0
